Bug 200098: Double click near beginning of word selects two words (fix for Windows). r+sr=roc